[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-assistant-quant"
version = "0.1.0"
description = "OKX-first full-cycle quantitative trading system for research, backtesting, paper trading, and gated live execution."
requires-python = ">=3.9"
dependencies = [
  "pandas>=2.0",
  "pydantic>=2.0",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
parquet = ["pyarrow>=15.0"]
dev = ["pytest>=8.0"]

[project.scripts]
quant = "quant_system.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
